[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.137.1",
    "markdown>=3.10.2",
    "notion-client>=3.1.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-slugify>=8.0.4",
    "sqlalchemy>=2.0.51",
    "typer>=0.26.7",
]
